@@ -19,7 +19,8 @@ import static org.junit.Assert.*;
  * Integration test for incremental compilation feature.
  * Tests the full flow from command-line options to compilation with dependency tracking.
  */
-public class IncrementalCompilationIntegrationTest {
+public class IncrementalCompilationIntegrationTest
+{
 
   private Path tempDir;
   private Path srcDir;
@@ -27,52 +28,59 @@ public class IncrementalCompilationIntegrationTest {
   private File dependencyFile;
 
   @Before
-  public void setUp() throws IOException {
-    tempDir = Files.createTempDirectory("incremental-integration-test");
-    srcDir = tempDir.resolve("src");
-    outputDir = tempDir.resolve("output");
-    Files.createDirectories(srcDir);
-    Files.createDirectories(outputDir);
-    dependencyFile = tempDir.resolve("deps.json").toFile();
+  public void setUp() throws IOException
+  {
+    tempDir = Files.createTempDirectory( "incremental-integration-test" );
+    srcDir = tempDir.resolve( "src" );
+    outputDir = tempDir.resolve( "output" );
+    Files.createDirectories( srcDir );
+    Files.createDirectories( outputDir );
+    dependencyFile = tempDir.resolve( "deps.json" ).toFile();
   }
 
   @After
-  public void tearDown() throws IOException {
-    if (tempDir != null && Files.exists(tempDir)) {
-      try (Stream<Path> paths = Files.walk(tempDir)) {
-        paths.sorted(Comparator.reverseOrder())
-             .map(Path::toFile)
-             .forEach(File::delete);
+  public void tearDown() throws IOException
+  {
+    if( tempDir != null && Files.exists( tempDir ) )
+    {
+      try (Stream<Path> paths = Files.walk( tempDir ))
+      {
+        paths.sorted( Comparator.reverseOrder() )
+          .map( Path::toFile )
+          .forEach( File::delete );
       }
     }
   }
 
-  private IncrementalCompilationManager newManager() {
-    return new IncrementalCompilationManager(dependencyFile.getAbsolutePath(),
-      Collections.singletonList(srcDir.toAbsolutePath().toString()),
-      Collections.emptyList(), Collections.emptyList(), false);
+  private IncrementalCompilationManager newManager()
+  {
+    return new IncrementalCompilationManager( dependencyFile.getAbsolutePath(),
+                                              Collections.singletonList( srcDir.toAbsolutePath().toString() ),
+                                              Collections.emptyList(), Collections.emptyList(), false );
   }
 
   @Test
-  public void testIncrementalCompilationEnabled() {
+  public void testIncrementalCompilationEnabled()
+  {
     // Given
     CommandLineOptions options = new CommandLineOptions();
     // Simulate setting incremental options via reflection (since they're private)
     // In a real test environment, we'd use JCommander to parse arguments
-    setPrivateField(options, "_incremental", true);
-    setPrivateField(options, "_dependencyFile", dependencyFile.getAbsolutePath());
-    setPrivateField(options, "_changedTypes", "MyClass");
-    setPrivateField(options, "_removedTypes", "");
+    setPrivateField( options, "_incremental", true );
+    setPrivateField( options, "_dependencyFile", dependencyFile.getAbsolutePath() );
+    setPrivateField( options, "_changedTypes", "MyClass" );
+    setPrivateField( options, "_removedTypes", "" );
 
     // Then
-    assertTrue(options.isIncremental());
-    assertEquals(dependencyFile.getAbsolutePath(), options.getDependencyFile());
-    assertEquals(1, options.getChangedTypes().size());
-    assertEquals(0, options.getRemovedTypes().size());
+    assertTrue( options.isIncremental() );
+    assertEquals( dependencyFile.getAbsolutePath(), options.getDependencyFile() );
+    assertEquals( 1, options.getChangedTypes().size() );
+    assertEquals( 0, options.getRemovedTypes().size() );
   }
 
   @Test
-  public void testIncrementalOptionParsing() {
+  public void testIncrementalOptionParsing()
+  {
     // This test would verify that command-line arguments are parsed correctly
     // In a real implementation, we'd test with JCommander parsing
 
@@ -85,102 +93,110 @@ public class IncrementalCompilationIntegrationTest {
 
     // In actual test, we'd parse these with JCommander and verify
     // For now, we just document the expected behavior
-    assertTrue("Should parse -incremental flag", true);
-    assertTrue("Should parse custom dependency file path", true);
-    assertTrue("Should parse multiple changed files", true);
-    assertTrue("Should parse deleted files", true);
+    assertTrue( "Should parse -incremental flag", true );
+    assertTrue( "Should parse custom dependency file path", true );
+    assertTrue( "Should parse multiple changed files", true );
+    assertTrue( "Should parse deleted files", true );
   }
 
   @Test
-  public void testFullIncrementalCompilationScenario() throws IOException {
+  public void testFullIncrementalCompilationScenario() throws IOException
+  {
     // Scenario: Base class changes, dependent classes should recompile.
     // Source files don't actually need to exist for this test -- only the dep file matters.
-    IncrementalCompilationTestSupport.writeDependencyFile(dependencyFile,
-      Map.of("test.BaseClass", List.of("test.DerivedClass"),
-              "test.DerivedClass", Collections.emptyList()));
+    IncrementalCompilationTestSupport.writeDependencyFile( dependencyFile,
+                                                           Map.of( "test.BaseClass", List.of( "test.DerivedClass" ),
+                                                                   "test.DerivedClass", Collections.emptyList() ) );
 
     Set<String> toRecompile = newManager().calculateRecompilationSet(
-      Set.of("test.BaseClass"),  // Changed types as FQCNs
+      Set.of( "test.BaseClass" ),  // Changed types as FQCNs
       Collections.emptySet()
     );
 
-    assertTrue("Base class should be recompiled",
-      toRecompile.contains("test.BaseClass"));
-    assertTrue("Derived class should be recompiled",
-      toRecompile.contains("test.DerivedClass"));
-    assertFalse("Independent class should NOT be recompiled",
-      toRecompile.contains("test.IndependentClass"));
+    assertTrue( "Base class should be recompiled",
+                toRecompile.contains( "test.BaseClass" ) );
+    assertTrue( "Derived class should be recompiled",
+                toRecompile.contains( "test.DerivedClass" ) );
+    assertFalse( "Independent class should NOT be recompiled",
+                 toRecompile.contains( "test.IndependentClass" ) );
   }
 
   @Test
-  public void testFileDeletedScenario() throws IOException {
+  public void testFileDeletedScenario() throws IOException
+  {
     // Scenario: Interface deleted, implementations should recompile.
-    IncrementalCompilationTestSupport.writeDependencyFile(dependencyFile,
-      Map.of("test.IMyInterface", List.of("test.ImplClass1", "test.ImplClass2"),
-              "test.ImplClass1", Collections.emptyList(),
-              "test.ImplClass2", Collections.emptyList()));
+    IncrementalCompilationTestSupport.writeDependencyFile( dependencyFile,
+                                                           Map.of( "test.IMyInterface", List.of( "test.ImplClass1", "test.ImplClass2" ),
+                                                                   "test.ImplClass1", Collections.emptyList(),
+                                                                   "test.ImplClass2", Collections.emptyList() ) );
 
     Set<String> toRecompile = newManager().calculateRecompilationSet(
       Collections.emptySet(),
-      Set.of("test.IMyInterface")  // Removed types as FQCNs
+      Set.of( "test.IMyInterface" )  // Removed types as FQCNs
     );
 
-    assertTrue("Implementation 1 should be recompiled",
-      toRecompile.contains("test.ImplClass1"));
-    assertTrue("Implementation 2 should be recompiled",
-      toRecompile.contains("test.ImplClass2"));
+    assertTrue( "Implementation 1 should be recompiled",
+                toRecompile.contains( "test.ImplClass1" ) );
+    assertTrue( "Implementation 2 should be recompiled",
+                toRecompile.contains( "test.ImplClass2" ) );
   }
 
   @Test
-  public void testNoRecompilationNeeded() throws IOException {
+  public void testNoRecompilationNeeded() throws IOException
+  {
     // Scenario: File changes but has no dependents. Empty dep file.
-    IncrementalCompilationTestSupport.writeDependencyFile(dependencyFile,
-            Map.of("test.LonelyClass", Collections.emptyList()));
+    IncrementalCompilationTestSupport.writeDependencyFile( dependencyFile,
+                                                           Map.of( "test.LonelyClass", Collections.emptyList() ) );
 
     Set<String> toRecompile = newManager().calculateRecompilationSet(
-      Set.of("test.LonelyClass"),  // Changed types as FQCNs
+      Set.of( "test.LonelyClass" ),  // Changed types as FQCNs
       Collections.emptySet()
     );
 
     // Only the changed file itself should be recompiled
-    assertEquals(1, toRecompile.size());
-    assertTrue(toRecompile.contains("test.LonelyClass"));
+    assertEquals( 1, toRecompile.size() );
+    assertTrue( toRecompile.contains( "test.LonelyClass" ) );
   }
 
   @Test
-  public void testDependencyJsonFormat() throws IOException {
+  public void testDependencyJsonFormat() throws IOException
+  {
     // Verify the exact JSON format of the dependency file produced by
     // updateDependencyFile (the production code path, not the helper).
     IncrementalCompilationManager manager = newManager();
-    manager.recordTypeDependency("com.example.BaseClass", "com.example.DerivedClass");
-    manager.recordTypeDependency("com.example.BaseClass", "com.example.AnotherDerived");
+    manager.recordTypeDependency( "com.example.BaseClass", "com.example.DerivedClass" );
+    manager.recordTypeDependency( "com.example.BaseClass", "com.example.AnotherDerived" );
     manager.updateDependencyFile(
-      Set.of("com.example.DerivedClass", "com.example.AnotherDerived"),
-      Collections.emptySet());
+      Set.of( "com.example.DerivedClass", "com.example.AnotherDerived" ),
+      Collections.emptySet() );
 
-    String actualJson = new String(Files.readAllBytes(dependencyFile.toPath()));
+    String actualJson = new String( Files.readAllBytes( dependencyFile.toPath() ) );
 
     String expectedJson = "{\n" +
-      "  \"version\": \"" + DEPENDENCY_VERSION + "\",\n" +
-      "  \"consumers\": {\n" +
-      "    \"com.example.BaseClass\": [\n" +
-      "      \"com.example.AnotherDerived\",\n" +
-      "      \"com.example.DerivedClass\"\n" +
-      "    ]\n" +
-      "  }\n" +
-      "}";
+                          "  \"version\": \"" + DEPENDENCY_VERSION + "\",\n" +
+                          "  \"consumers\": {\n" +
+                          "    \"com.example.BaseClass\": [\n" +
+                          "      \"com.example.AnotherDerived\",\n" +
+                          "      \"com.example.DerivedClass\"\n" +
+                          "    ]\n" +
+                          "  }\n" +
+                          "}";
 
-    assertEquals("Dependency JSON format should match expected structure",
-      expectedJson, actualJson);
+    assertEquals( "Dependency JSON format should match expected structure",
+                  expectedJson, actualJson );
   }
 
-  private void setPrivateField(Object obj, String fieldName, Object value) {
-    try {
-      java.lang.reflect.Field field = obj.getClass().getDeclaredField(fieldName);
-      field.setAccessible(true);
-      field.set(obj, value);
-    } catch (Exception e) {
-      throw new RuntimeException(e);
+  private void setPrivateField( Object obj, String fieldName, Object value )
+  {
+    try
+    {
+      java.lang.reflect.Field field = obj.getClass().getDeclaredField( fieldName );
+      field.setAccessible( true );
+      field.set( obj, value );
+    }
+    catch( Exception e )
+    {
+      throw new RuntimeException( e );
     }
   }
 
